syntax = "proto3";

package awakari.source.sites;

option go_package = "api/grpc/source/sites";

import "google/protobuf/timestamp.proto";

service Service {
  rpc Read(ReadRequest) returns (ReadResponse);
}
message ReadRequest {
  string addr = 1;
}

message ReadResponse {
  Site site = 1;
}

message Site {
  string addr = 1;
  string groupId = 2;
  string userId = 3;
  google.protobuf.Timestamp lastUpdate = 4;
}
